generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

/// Slice 1: no auth, no user model.
/// When we add auth later, we add a User model and a userId FK here.
model Baby {
  id        String   @id @default(uuid())
  name      String
  birthDate DateTime
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  feedingSessions FeedingSession[]
  sleeps          Sleep[]
  nappies         Nappy[]
  feedingEvents   FeedingEvent[]
}

/// A feeding session groups one or more segments (e.g. left breast → right breast → bottle top-up).
model FeedingSession {
  id        String           @id @default(uuid())
  babyId    String
  baby      Baby             @relation(fields: [babyId], references: [id])
  startedAt DateTime
  endedAt   DateTime?        /// Null while the session is still in progress.
  notes     String?
  createdAt DateTime         @default(now())

  segments      FeedingSegment[]
  feedingEvents FeedingEvent[]

  @@index([babyId, startedAt])
}

/// A single breast or bottle feed within a session.
model FeedingSegment {
  id        String         @id @default(uuid())
  sessionId String
  session   FeedingSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  order     Int            /// Sequence number within the session (1, 2, 3...).
  side      SegmentSide
  startedAt DateTime
  endedAt   DateTime?      /// Null while the segment is still in progress.
  volumeMl  Int?           /// Only relevant for BOTTLE segments.
  notes     String?
  createdAt DateTime       @default(now())

  @@unique([sessionId, order])
  @@index([sessionId, startedAt])
}

enum SegmentSide {
  LEFT
  RIGHT
  BOTTLE
}

model Sleep {
  id        String   @id @default(uuid())
  babyId    String
  baby      Baby     @relation(fields: [babyId], references: [id])
  startedAt DateTime
  endedAt   DateTime? // nullable — sleep might still be in progress
  notes     String?
  createdAt DateTime  @default(now())

  @@index([babyId, startedAt])
}

model Nappy {
  id        String    @id @default(uuid())
  babyId    String
  baby      Baby      @relation(fields: [babyId], references: [id])
  changedAt DateTime
  type      NappyType
  notes     String?
  createdAt DateTime  @default(now())

  @@index([babyId, changedAt])
}

enum NappyType {
  WET
  DIRTY
  MIXED
}

/// A point-in-time feeding event (burp or spill). Can be linked to a feeding session or standalone.
model FeedingEvent {
  id        String            @id @default(uuid())
  babyId    String
  baby      Baby              @relation(fields: [babyId], references: [id])
  sessionId String?           /// Null for standalone events (outside a feeding session).
  session   FeedingSession?   @relation(fields: [sessionId], references: [id], onDelete: SetNull)
  type      FeedingEventType
  timestamp DateTime
  createdAt DateTime          @default(now())

  @@index([babyId, timestamp])
  @@index([sessionId])
}

enum FeedingEventType {
  BURP
  SPILL
  COUGH
}
