erDiagram
    FeedingSession {
        uuid id PK
        datetime startedAt
        datetime endedAt "nullable"
        string notes "nullable"
        datetime createdAt
    }

    FeedingSegment {
        uuid id PK
        uuid sessionId FK
        int order "sequence within session"
        SegmentSide side "LEFT | RIGHT | BOTTLE"
        datetime startedAt
        datetime endedAt "nullable"
        int volumeMl "nullable, BOTTLE only"
        string notes "nullable"
        datetime createdAt
    }

    FeedingEvent {
        uuid id PK
        uuid sessionId FK "nullable"
        FeedingEventType type "BURP | SPILL | COUGH"
        datetime timestamp
        datetime createdAt
    }

    FeedingSession ||--o{ FeedingSegment : "has many (cascade delete)"
    FeedingSession ||--o{ FeedingEvent : "has many (set null on delete)"
